[gd_scene load_steps=5 format=3 uid="uid://cfgh7svcqxu8y"]

[ext_resource type="Script" path="res://script/enemy/base_enemy.gd" id="1_mb4os"]
[ext_resource type="PackedScene" uid="uid://bbinpg7puli3u" path="res://scene/buff/buff_manager.tscn" id="2_urdlp"]
[ext_resource type="Texture2D" uid="uid://cgr7460np6hw1" path="res://asset/image/asset.png" id="3_waxlp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aes5c"]
atlas = ExtResource("3_waxlp")
region = Rect2(800, 600, 200, 300)

[node name="BaseEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 20
motion_mode = 1
script = ExtResource("1_mb4os")

[node name="Shadow" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite2D" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]

[node name="BuffManager" parent="." instance=ExtResource("2_urdlp")]

[node name="StatusIcon" type="Sprite2D" parent="."]
position = Vector2(34, 34)
scale = Vector2(0.365, 0.365)
texture = SubResource("AtlasTexture_aes5c")
hframes = 2
vframes = 3

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-1.90735e-06, -1.90735e-06)
scale = Vector2(3.2, 3.2)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
